--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,11 @@
     "require": {
         "php": ">=7.4",
         "ext-json": "*",
-        "semperton/database": "^0.2.0",
+        "ext-pdo": "*",
+        "ext-pdo_sqlite": "*",
         "semperton/query": "@dev",
-        "semperton/search": "@dev"
+        "semperton/search": "@dev",
+        "semperton/database": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
