--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "ext-sqlite3": "*",
         "semperton/query": "@dev",
         "semperton/search": "@dev",
-        "semperton/database": "@dev"
+        "semperton/database": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
