--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     "autoload": {
         "psr-4": {
             "Semperton\\Storage\\": "src/"
-        }
+        },
+        "files": ["src/functions.php"]
     }
 }
